# cmake_cpp_template

./: CMakeLists.txt  README.md
include/: helloworld.hpp
lib/: helloworld.lib
src/: CMakeLists.txt  helloworld.cc
test/: CMakeLists.txt  test1.cc
